--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,4 @@
-spring.datasource.url: jdbc:mysql://localhost:3306/tasklib?useSSL=true
+spring.datasource.url: jdbc:mysql://localhost:3306/tasklib
 spring.datasource.username: root
 spring.datasource.password: gbv!b0vgi@%#31IIDi
 spring.jpa.hibernate.ddl-auto: create
